@@ -20,6 +20,8 @@ import java.util.stream.Collectors;
 
 public class DefaultOrderUseCase implements OrderUseCase {
 
+    private static final String OLD_STATUS_FIELD = "oldStatus";
+    private static final String NEW_STATUS_FIELD = "newStatus";
     private final OrderGateway orderGateway;
     private final ProductGateway productGateway;
     private final ClientGateway clientGateway;
@@ -51,7 +53,7 @@ public class DefaultOrderUseCase implements OrderUseCase {
         validateOrderToInsert(order);
         Client client = getClient(order);
         List<Long> productIds = getProductIds(order);
-        List<Product> products = productGateway.findByIds(productIds.stream().distinct().collect(Collectors.toList()));
+        List<Product> products = productGateway.findByIds(productIds.stream().distinct().toList());
         validateProducts(order, products);
         var total = calculateTotal(productIds, products);
         validateTotal(total);
@@ -93,19 +95,19 @@ public class DefaultOrderUseCase implements OrderUseCase {
 
     private void validateUpdateStatus(OrderStatus newStatus, OrderStatus oldStatus) {
         if (OrderStatus.CANCELADO.equals(oldStatus)) {
-            throw new InvalidAttributeException("You can not change status of orders that are canceled.", "oldStatus");
+            throw new InvalidAttributeException("You can not change status of orders that are canceled.", OLD_STATUS_FIELD);
         }
         if (OrderStatus.AGUARDANDO_PAGAMENTO.equals(oldStatus) && !OrderStatus.CANCELADO.equals(newStatus)) {
-            throw new InvalidAttributeException("You can not change status of orders that are awaiting payment.", "oldStatus");
+            throw new InvalidAttributeException("You can not change status of orders that are awaiting payment.", OLD_STATUS_FIELD);
         }
         if (oldStatus.ordinal() + 1 != newStatus.ordinal() && !(OrderStatus.AGUARDANDO_PAGAMENTO.equals(oldStatus) && OrderStatus.CANCELADO.equals(newStatus))) {
-            throw new InvalidAttributeException(String.format("Next status from '%s' should not be '%s'", oldStatus.name(), newStatus.name()), "newStatus");
+            throw new InvalidAttributeException(String.format("Next status from '%s' should not be '%s'", oldStatus.name(), newStatus.name()), NEW_STATUS_FIELD);
         }
     }
 
     private void validateCheckout(OrderStatus oldStatus) {
         if (!canBePaid(oldStatus)) {
-            throw new InvalidAttributeException("You can only check out orders that are awaiting payment.", "oldStatus");
+            throw new InvalidAttributeException("You can only check out orders that are awaiting payment.", OLD_STATUS_FIELD);
         }
     }
 
@@ -117,28 +119,28 @@ public class DefaultOrderUseCase implements OrderUseCase {
         order.getItems().forEach(item -> {
             Optional<Product> itemProduct = products.stream().filter(product -> product.getId().equals(item.getProductId())).findFirst();
             if (itemProduct.isEmpty()) {
-                throw new InvalidAttributeException("Product '" + item.getProductId() + "' not found.", "items.productId");
+                throw new InvalidAttributeException(String.format("Product '%s' not found.", item.getProductId()), "items.productId");
             }
 
             if (!validateCategory(itemProduct.get().getCategory(), false, !Optional.ofNullable(item.getAdditionalIds()).orElse(Collections.emptyList()).isEmpty())) {
-                throw new InvalidAttributeException("Product '" + item.getProductId() + "' has invalid category for an item.'", "items.productId");
+                throw new InvalidAttributeException(String.format("Product '%s' has invalid category for an item.'", item.getProductId()), "items.productId");
             }
 
             Optional.ofNullable(item.getAdditionalIds()).orElse(Collections.emptyList()).forEach(additional -> {
                 Optional<Product> additionalProduct = products.stream().filter(product -> product.getId().equals(additional)).findFirst();
                 if (additionalProduct.isEmpty()) {
-                    throw new InvalidAttributeException("Product '" + additional + "' not found.", "items.additionalIds");
+                    throw new InvalidAttributeException(String.format("Product '%s' not found.", additional), "items.additionalIds");
                 }
 
                 if (!validateCategory(additionalProduct.get().getCategory(), true, false)) {
-                    throw new InvalidAttributeException("Product '" + additional + "' has invalid category for an additional.'", "items.additionalIds");
+                    throw new InvalidAttributeException(String.format("Product '%s' has invalid category for an additional.'", additional), "items.additionalIds");
                 }
             });
 
         });
     }
 
-    private Boolean validateCategory(Category category, Boolean isAdditional, Boolean hasAdditional) {
+    private boolean validateCategory(Category category, boolean isAdditional, boolean hasAdditional) {
         List<Category> itemCategories = List.of(Category.LANCHE, Category.ACOMPANHAMENTO, Category.BEBIDA, Category.SOBREMESA);
         List<Category> additionalCategories = List.of(Category.ADICIONAL);
         List<Category> itemWithAdditionalsCategories = List.of(Category.LANCHE);
